Fix library.properties so that this library can be installed in the Arduino GUI.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=SignalControl
-#version=1.0
-author=Sven Rosvall
-maitainer=Sven Rosvall
-sentence=This library provides code for controlling LEDs in signals.
-paragraph=This library provides code for controlling LEDs in signals.
+version=1.0
+author=Sven Rosvall <sven@rosvall.ie>
+maintainer=Sven Rosvall <sven@rosvall.ie>
+sentence=This library provides code for controlling LEDs in signals on your model railway.
+paragraph=Supports a variety of signals with different aspects. Also contains code to control the signals from sensors such as point(turnout) direction and track occupancy.
 category=Device Control
-#url
+url=https://github.com/SvenRosvall/SignalControl
 architectures=*
