Run tests with C++11 features as the Arduino IDE does.

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,7 @@ run-%: %
 	./$<
 
 CC=g++
-CPPFLAGS=-I../src -g -Wall
+CPPFLAGS=-std=gnu++11 -I../src -g -Wall
 
 testAll : testAll.o \
 	testSignalUnitTest.o \
