Add constructor for BlockDistanceInput for chaining. Add tests for complex track topology.

--- a/test/Makefile
+++ b/test/Makefile
@@ -22,6 +22,7 @@ testAll : testAll.o \
 	testBlockDistanceInput.o \
 	testDistanceWithCondition.o \
 	testDistanceChoice.o \
+	testBlockTopologies.o \
 	testPinInput.o \
 	testInvertInput.o \
 	testSettableInput.o \
